--- a/apps/document/content/changelog.mdx
+++ b/apps/document/content/changelog.mdx
@@ -4,4 +4,37 @@ slug: '/whats-new'
 section: 'introduction'
 ---
 
+<!-- markdownlint-disable MD025 -->
 # `@eo-cli` all changes
+<!-- markdownlint-enable MD025 -->
+
+## 20-02-2023
+
+**@eo-cli/utils** `v0.1.0`
+
+- setup @eo-cli
+
+**@eo-cli/constants** `v0.1.0`
+
+- setup @eo-cli
+
+**@eo-cli/cli** `v0.1.0`
+
+- setup @eo-cli
+
+**@eo-cli/command** `v0.1.0`
+
+- setup @eo-cli
+
+**@eo-cli/exec** `v0.1.0`
+
+- setup @eo-cli
+
+**@eo-cli/init** `v0.1.0`
+
+- setup @eo-cli
+
+**@eo-cli/package** `v0.1.0`
+
+- setup @eo-cli
+
